--- a/bizwechat.html
+++ b/bizwechat.html
@@ -41,12 +41,13 @@ RED.nodes.registerType('bizwechat-output', {
   icon: 'white-globe.png',
   align: 'right'
 })
-RED.nodes.registerType('bizwechat-pushbear', {
+
+RED.nodes.registerType('bizwechat-push', {
   category: '企业微信',
   color: '#7ac6cb',
-  paletteLabel: '推送',
+  paletteLabel: '高级推送',
   label () {
-    return this.name || '推送'
+    return this.name || '高级推送'
   },
   defaults: {
     name: {
@@ -55,27 +56,34 @@ RED.nodes.registerType('bizwechat-pushbear', {
     bizwechat: {
       value: '',
       type: 'bizwechat-configurator'
-    },
-    touser: {
-      value: ''
-    },
-
-    toparty: {
-      value: ''
-    },
-
-    title: {
-      value: ''
-    },
-
-    description: {
-      value: ''
     }
 
   },
   inputs: 1,
   outputs: 1,
-  icon: 'white-globe.png'
+  icon: 'white-globe.png',
+})
+
+RED.nodes.registerType('bizwechat-upload', {
+  category: '企业微信',
+  color: '#7ac6cb',
+  paletteLabel: '上传临时素材',
+  label () {
+    return this.name || '上传临时素材'
+  },
+  defaults: {
+    name: {
+      value: ''
+    },
+    bizwechat: {
+      value: '',
+      type: 'bizwechat-configurator'
+    }
+
+  },
+  inputs: 1,
+  outputs: 1,
+  icon: 'white-globe.png',
 })
 
 RED.nodes.registerType('bizwechat-pushbear', {
@@ -232,9 +240,69 @@ RED.nodes.registerType('bizwechat-pushbear', {
         <dt class="optional">touser <span class="property-type">string</span>
         </dt>
         <dd>消息接收的用户，多个可以使用|分开，例如：xxx|xxx|xxx,不填写默认推送所有人</dd>
+        <dt class="optional">introduction <span class="property-type">string</span>
+        </dt>
+        <dd>卡片上面的描述,用户一些从正文正提取信息不还好看的情况下</dd>
+        
 
     </dl>
     <h3>输出</h3>
     <p>输入信心合并配置信息输出</p>
 
+</script>
+
+
+<script type="text/x-red" data-template-name="bizwechat-push">
+  <div class="form-row">
+    <label for="node-input-bizwechat"><i class="icon-tag"></i>配置</label>
+    <input type="text" id="node-input-bizwechat">
+  </div>
+  <div class="form-row">
+    <label for="node-input-name"><i class="icon-tag"></i>名称</label>
+    <input type="text" id="node-input-name">
+  </div>
+</script>
+<script type="text/x-red" data-help-name="bizwechat-push">
+  <p>高级推送</p>
+    <h3>输入</h3>
+    <p>发送自定义消息,具体信息格式<a href="https://work.weixin.qq.com/api/doc#90000/90135/90236">参考企业微信</a>,
+      企业应用的id和token程序自会动添加,其余信息需要自行填写</p>
+    <dl class="message-properties">
+        <dt>payload
+            <span class="property-type">object</span>
+        </dt>
+        <dd>需要发送的信息</dd>
+    </dl>
+    <h3>输出</h3>
+    <p>企业微信返回信息完整返回</p>
+</script>
+
+
+<script type="text/x-red" data-template-name="bizwechat-upload">
+  <div class="form-row">
+    <label for="node-input-bizwechat"><i class="icon-tag"></i>配置</label>
+    <input type="text" id="node-input-bizwechat">
+  </div>
+  <div class="form-row">
+    <label for="node-input-name"><i class="icon-tag"></i>名称</label>
+    <input type="text" id="node-input-name">
+  </div>
+</script>
+<script type="text/x-red" data-help-name="bizwechat-upload">
+    <p>上传临时素材</p>
+    <h3>输入</h3>
+    <p>素材上传得到media_id，该media_id仅三天内有效,所有文件size必须大于5个字节, 
+      <a href="https://work.weixin.qq.com/api/doc#90000/90135/90253">上传的媒体文件限制</a>
+    </p>
+    <dl class="message-properties">
+        <dt>payload
+            <span class="property-type">buffer</span>
+        </dt>
+        <dd>需要上传的文件信息</dd>
+        <dt >type <span class="property-type">string</span>
+        </dt>
+        <dd>文件类型</dd>
+    </dl>
+    <h3>输出</h3>
+    <p>企业微信返回信息完整返回</p>
 </script>
