修复临时素材上传问题

--- a/bizwechat.html
+++ b/bizwechat.html
@@ -301,7 +301,10 @@ RED.nodes.registerType('bizwechat-pushbear', {
         <dd>需要上传的文件信息</dd>
         <dt >type <span class="property-type">string</span>
         </dt>
-        <dd>文件类型</dd>
+        <dd>文件类型,参考上面链接</dd>
+        <dt >filename <span class="property-type">string</span>
+        </dt>
+        <dd>文件名称,随便填写,因为不知道你发送的文件格式</dd>
     </dl>
     <h3>输出</h3>
     <p>企业微信返回信息完整返回</p>
