添加教程说明

--- a/bizwechat-configurator.html
+++ b/bizwechat-configurator.html
@@ -104,4 +104,9 @@ RED.nodes.registerType('bizwechat-configurator', {
   </script>
   <script type="text/x-red" data-help-name="bizwechat-configurator">
 
+    <p>企业微信代理</p>
+    <p>由于企业微信变更，只有可信ip才能发送信息，造成家里网络无法直接发送信息到企微</p>
+    <p>基于这种情况，增加了企微代理功能，原理： 原先直接请求企微的接口信息可以通过代理服务区请求。
+      <a href="https://mp.weixin.qq.com/s/pEP0RUhGSij3HYtasbHZig" target="_blank">详细教程可以查看这里，也可以留言告知你需要的教程或节点。</a></p>
+
   </script>
