--- a/bizwechat-configurator.html
+++ b/bizwechat-configurator.html
@@ -101,8 +101,8 @@ RED.nodes.registerType('bizwechat-configurator', {
     </div>
 
     <div class="form-row">
-      <label for="node-config-input-stt"><i></i>stt 地址</label>
-      <input type="text" id="node-config-input-stt" placeholder="stt ip地址格式（http://ip:port/api）">
+      <label for="node-config-input-stt"><i></i>asr 地址</label>
+      <input type="text" id="node-config-input-stt" placeholder="asr ip地址格式（http://ip:port/api）">
     </div>
     <div class="form-row">
       <label style="width: 100%;text-align: right;padding-right: 34px;box-sizing: border-box;" >
